# deb_mirror

./: .gitignore  Cargo.toml  flake.nix  main.org  nix_build.sh  nix_develop.sh  package.nix  run_cpu.sh
src/: deb_mirror.rs  download_dist.rs  main.rs  mysync.rs  parallel_run.rs
