[package]
name = "deb_mirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["json"] }
# substring = "*"
anyhow = "1.0.100"
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.31"
sha2 = { version = "0.10.9", features = ["asm", "sha2-asm"] }
hex = "0.4.3"

[[bin]]
name = "deb_mirror"
path = "src/deb_mirror.rs"

[[bin]]
name = "mysync"
path = "src/mysync.rs"
